test/test_bad/noname.yang
module { // error: expected module name
}
